<resources>
    <string name="app_name">Lyricsify</string>
    <string name="open_spotify">Open Spotify</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="next">next</string>
    <string name="pause">pause</string>
    <string name="previous">previous</string>
    <string name="play_state_text">Currently Playing</string>
    <string name="last_detected_song">Last Detected Song</string>
    <string name="dialog_title">Enable Device Broadcast Status</string>
    <string name="dialog_message">Please enable \n\'Device Broadcast Status\'\n in Spotify settings for Lyricify to work. \nLyricify won\'t work without it.</string>
    <string name="dialog_positive_btn">Open Spotify</string>
    <string name="dialog_negative_btn">I have enabled it</string>
    <string name="lyrics">Lyrics</string>
    <string name="lyrics_show_here">Lyrics show here</string>
</resources>