<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lyricsify.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <ImageView
        android:id="@+id/albumartimage"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                style="@style/CardViewTheme">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/adSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:elevation="8dp"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        android:text="@string/lyrics"
                        app:switchPadding="10dp"
                        app:thumbTint="@color/colorPrimaryDark"
                        app:useMaterialThemeColors="true" />



                    <LinearLayout
                        android:id="@+id/songInfoLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/isPlaying"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/track"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:textAlignment="center"
                            android:textColor="@color/trackColor"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/songInfoTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/lastUpdated"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:textAlignment="center"
                            android:textSize="14sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/mediaButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:scaleX="1.2"
                        android:scaleY="1.2">

                        <ImageButton
                            android:id="@+id/previous"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/previous"
                            android:onClick="handleMedia"
                            android:src="@drawable/ic_baseline_skip_previous_24" />

                        <ImageButton
                            android:id="@+id/togglePlayPause"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/pause"
                            android:onClick="handleMedia"
                            android:src="@drawable/ic_baseline_play_arrow" />

                        <ImageButton
                            android:id="@+id/next"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/next"
                            android:onClick="handleMedia"
                            android:src="@drawable/ic_skip_next_24" />

                    </LinearLayout>

                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/mute"
                                style="@style/ButtonTheme"
                                android:layout_marginStart="7dp"
                                android:onClick="handleMuteUnmute"
                                android:text="@string/mute"
                                android:textColor="#1B5E20" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/openSpotify"
                                style="@style/ButtonTheme"
                                android:layout_marginStart="7dp"
                                android:layout_marginEnd="7dp"
                                android:onClick="handleOpenSpotify"
                                android:text="@string/open_spotify"
                                android:textColor="#1B5E20" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/unMute"
                                style="@style/ButtonTheme"
                                android:layout_marginEnd="7dp"
                                android:onClick="handleMuteUnmute"
                                android:text="@string/unmute"
                                android:textColor="#1B5E20" />

                        </LinearLayout>
                    </HorizontalScrollView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                style="@style/CardViewTheme"
                android:layout_marginBottom="20dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/outputTextLyrics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLines="8"
                        android:textSize="25sp"
                        android:text="Lyrics show here"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>